--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
-    "react-type-animation": "^3.2.0"
+    "react-spring": "^9.7.3",
+    "react-type-animation": "^3.2.0",
+    "resend": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
