--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "class-variance-authority": "^0.7.0",
     "framer-motion": "^10.16.5",
+    "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -17,8 +21,7 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "react-spring": "^9.7.3",
-    "react-type-animation": "^3.2.0",
-    "resend": "^2.0.0"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
