--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@vercel/speed-insights": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.294.0",
