--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.8.0",
     "react-spring": "^9.7.3",
     "react-type-animation": "^3.2.0"
   },
