--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emailjs/browser": "^3.11.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@vercel/speed-insights": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.294.0",
-    "next": "14.0.3",
+    "motion": "^12.15.0",
+    "next": "^14.0.3",
     "next-themes": "^0.2.1",
     "popmotion": "^11.0.5",
     "react": "^18",
@@ -23,7 +25,9 @@
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.8.0",
     "react-spring": "^9.7.3",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
