--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.2",
     "@vercel/speed-insights": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -22,6 +23,7 @@
     "popmotion": "^11.0.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hotkeys-hook": "^5.1.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.8.0",
     "react-spring": "^9.7.3",
