--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.294.0",
-    "motion": "^12.15.0",
+    "motion": "^12.23.12",
     "next": "^14  .0.3",
     "next-themes": "^0.2.1",
     "popmotion": "^11.0.5",
@@ -28,7 +28,7 @@
     "react-intersection-observer": "^9.8.0",
     "react-spring": "^9.7.3",
     "react-type-animation": "^3.2.0",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -40,6 +40,7 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.8.3"
   }
 }
